tests/build_fail/bseq_fail_ident_expr_i32_overflow.stderr
error: literal out of range for `i32`
 --> tests/build_fail/bseq_fail_ident_expr_i32_overflow.rs:5:19
  |
5 |     let _ = bseq!(var:32);
  |                   ^^^
  |
  = note: the literal `var` does not fit into the type `i32` whose range is `-2147483648..=2147483647`
  = help: consider using the type `u32` instead
  = note: `#[deny(overflowing_literals)]` on by default
