tests/build_fail/bseq_fail_ident_expr_i32_overflow.rs
use bit_seq::bseq;

fn main() {
    let var = 0;
    let _ = bseq!(var:32);
}